# chimitheque_types

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bookmark.rs  borrowing.rs  casnumber.rs  casnumber_tests.rs  category.rs  category_tests.rs  cenumber.rs  cenumber_tests.rs  classofcompound.rs  classofcompound_tests.rs  define.rs  empiricalformula.rs  empiricalformula_tests.rs  entity.rs  entitypeople.rs  error.rs  hazardstatement.rs  hazardstatement_tests.rs  lib.rs  linearformula.rs  linearformula_tests.rs  name.rs  permission.rs  permission_tests.rs  person.rs  person_tests.rs  personentities.rs  physicalstate.rs  precautionarystatement.rs  precautionarystatement_tests.rs  producer.rs  producer_tests.rs  producerref.rs  product.rs  productclassesofcompounds.rs  productclassofcompound.rs  producthazardstatements.rs  productprecautionarystatements.rs  productsupplierrefs.rs  productsymbols.rs  (+26 more)
src/testdata/: pubchem_pug_view_1.4-butanediol.json  pubchem_pug_view_acetaminophen.json  pubchem_pug_view_acetic_acid.json  pubchem_pug_view_aspirin.json  pubchem_pug_view_carbonate.json  pubchem_pug_view_vanadium_pentoxide.json
