[package]
name = "chimitheque_types"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "Types for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_types"
homepage = "https://github.com/tbellembois/chimitheque_types"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.94.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8"}
chrono = { version = "0.4.41", features = ["serde"] }
email_address = "0.2.9"
env_logger = "0.10.0"
http = "1.4.0"
jsonpath-rust = "0.3.5"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
url = "2.5.0"

chimitheque_traits = { git = "https://github.com/tbellembois/chimitheque_traits.git", branch = "main" }
chimitheque_utils = { git = "https://github.com/tbellembois/chimitheque_utils.git", branch = "main" }

[patch."https://github.com/tbellembois/chimitheque_traits.git"]
chimitheque_traits = { path = "../chimitheque_traits" }

[patch."https://github.com/tbellembois/chimitheque_utils.git"]
chimitheque_utils = { path = "../chimitheque_utils" }
