[package]
name = "chimitheque_types"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "Types for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_types"
homepage = "https://github.com/tbellembois/chimitheque_types"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde", "alloc"] }
email_address = { version = "0.2.9", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
jsonpath-rust = { version = "0.3.5", default-features = false }
log = { version = "0.4.20", default-features = false }
regex = { version = "1.10.2", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
url = { version = "2.5.0", default-features = false }

chimitheque_traits = { git = "https://github.com/tbellembois/chimitheque_traits.git", branch = "main" }
chimitheque_utils = { git = "https://github.com/tbellembois/chimitheque_utils.git", branch = "main" }

[patch."https://github.com/tbellembois/chimitheque_traits.git"]
chimitheque_traits = { path = "/home/thbellem/workspace/workspace_rust/chimitheque_traits" }

[patch."https://github.com/tbellembois/chimitheque_utils.git"]
chimitheque_utils = { path = "/home/thbellem/workspace/workspace_rust/chimitheque_utils" }
